@@ -1,0 +1,2 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<err><err-code>zerr:ZAPI0028</err-code><err-description>"not a uri": invalid node URI</err-description><err-value/><err-module>/zorba/repository/structuralrelationships/test/rbkt/Queries/zorba/nodes/structural_err.xq</err-module><err-line>6</err-line></err>
